# festival-ca

./: .gitignore  AUTHORS  AUTHORS.ca  COPYRIGHT  INSTALL.ca.md  INSTALL.md  Makefile.in  Makefilevars.inc  README  README.ca  README.ca.md  README.md  THANKS  THANKS.ca  THANKS.ca.md  USAGE.ca.md  USAGE.md  configure  configure.ac  configure.in
.github/workflows/: build.yaml
debian/: README.source  changelog  control  copyright  docs  install  rules  watch
doc/: AGRAIMENTS  COPIA  COPYING  LLEGEIX  README  THANKS
doc/festvox.orig/: README
festival/lib/: languages.scm
festival/lib/dicts/upc/: upc_catalan_lts_rules-central.scm  upc_catalan_lts_rules-valencia.scm  upc_catalan_lts_rules.scm  upc_freeling_catalan.poslex  upc_freeling_catalan.tri.ngrambin  upcdict_catalan-1.0-central.out  upcdict_catalan-1.0-valencia.out  upcdict_catalan-1.0.out  upclex_catalan.scm  upclex_central.scm  upclex_postlex.scm  upclex_valencia.scm
festival/lib/languages/: language_catalan.scm
festival/lib/upc_catalan/: cat_intro.text  upc_ca_generic_duration.scm  upc_ca_generic_lexicon.scm  upc_ca_generic_phrasing.scm  upc_catalan.scm  upc_catalan_date.scm  upc_catalan_hour.scm  upc_catalan_numbers.scm  upc_catalan_phones-central.scm  upc_catalan_phones.scm  upc_catalan_pos_tagger.scm  upc_catalan_tokenizer.scm  upc_catalan_tokenpos.scm
src/: TODO.txt  build_all.sh
src/00-Dictionary/: CompileDictionary.sh.in  CreateInternalFormat.pl  addfinalentries-central.sh  addfinalentries-valencia.sh  addfinalentries.sh  allo2pho-valencia.pl  allo2pho.pl  list2festival.pl
src/00Dictionary/: CompileDictionary.sh  CreateInternalFormat.pl  addfinalentries.sh  allo2pho.pl  build.sh  compare_dicts.sh  concatenate.sh  list2festival.pl  transcribe.sh
src/00Dictionary/merged/: autors.dic  bigcorpus.dic  festcat.v0.dic  news.dic
src/00Dictionary/withphonetics/partial/: adjs  advs  noms  tanc  vaux
src/00Dictionary/withphonetics/partial/phon/: adjs.phonetic  advs.phonetic  noms.phonetic  tanc.phonetic  vaux.phonetic
src/01LTSData/: 01-formateador.pl  03-OmetAbrev.pl  05-Extractorapostrofs.pl  07-Revisador.pl
src/01LTSData/00-input/: cat.phonetic  cat.pos  transcribe.sh
src/02-LTSMake/: 01-BuildLTS.sh  allowables-0.0.scm  allowables-0.1.scm  allowables-1.0.scm  allowables-1.1-central.scm  allowables-1.1-valencia.scm  allowables-1.1.scm  build_lts  build_lts.in  build_lts_rules  createmultiphonemes  fest2wagon  lts.ny.tree  purge_fest_dic  readme  reduce_dict  upc_catalan_allowables.scm  upc_catalan_lts_rules
src/03-Poslex/: 01-FormatDiccComplet.pl  02-FormatTaggerAmbAmpliació
src/04-ngram/: 01-ReducTAGCorpus.pl  02-FormatCorpus  03-SplitterCorpus.pl  04-ngrambuild.sh
src/data/: concatenate.sh  transcribe.sh  unicode2sampa.sh
src/data/festival/lib/: languages.scm
src/data/festival/lib/languages/: language_catalan.scm
src/data/festival/lib/upc_catalan/: upc_ca_generic_duration.scm  upc_ca_generic_durdata-central.scm  upc_ca_generic_durdata-valencia.scm  upc_ca_generic_durdata.scm  upc_ca_generic_f0model.scm  upc_ca_generic_intonation.scm  upc_ca_generic_lexicon.scm  upc_ca_generic_phoneset.scm  upc_ca_generic_phrasing.scm  upc_ca_generic_tagger.scm  upc_ca_generic_tokenizer.scm  upc_catalan.scm  upc_catalan_hour.scm  upc_catalan_numbers.scm  upc_catalan_phones-valencia.scm  upc_catalan_phones.scm  upc_catalan_phones_valencia.scm  upc_catalan_pos_tagger.scm  upc_catalan_tokenizer.scm  upc_catalan_tokenpos.scm
src/data/from_freeling/: adjs  advs  noms  tanc  vaux
src/data/otherdic/central/: morewords.dic
src/data/pos/: crea_corpusca.pl  crea_dictag.pl
src/data/pos/ancora-ca/: LICENCIA.html  LLICENCIA.html  README
src/data/pos/ancora-ca/3LB-CAT/: 06010100-1.tbf.xml  06010100-10.tbf.xml  06010100-12.tbf.xml  06010100-13.tbf.xml  06010100-14.tbf.xml  06010100-15.tbf.xml  06010100-16.tbf.xml  06010100-17.tbf.xml  06010100-18.tbf.xml  06010100-19.tbf.xml  06010100-2.tbf.xml  06010100-20.tbf.xml  06010100-21.tbf.xml  06010100-22.tbf.xml  06010100-23.tbf.xml  06010100-24.tbf.xml  06010100-25.tbf.xml  06010100-26.tbf.xml  06010100-27.tbf.xml  06010100-28.tbf.xml  06010100-29.tbf.xml  06010100-3.tbf.xml  06010100-30.tbf.xml  06010100-31.tbf.xml  06010100-32.tbf.xml  06010100-33.tbf.xml  06010100-34.tbf.xml  06010100-35.tbf.xml  06010100-36.tbf.xml  06010100-37.tbf.xml  06010100-38.tbf.xml  06010100-39.tbf.xml  06010100-4.tbf.xml  06010100-40.tbf.xml  06010100-41.tbf.xml  06010100-42.tbf.xml  06010100-43.tbf.xml  06010100-44.tbf.xml  06010100-45.tbf.xml  06010100-46.tbf.xml  (+213 more)
src/data/pos/ancora-ca/CESS-CAT-A/: 100352_20030919.tbf.xml  102211_20031006.tbf.xml  10463_20000608.tbf.xml  10482_20000608.tbf.xml  105131_20031030.tbf.xml  10588_20000609.tbf.xml  10588_20000609.tbf.xml.orig  105_20000201.tbf.xml  105_20000302.tbf.xml  105_20000702.tbf.xml  105_20001001.tbf.xml  105_20010301.tbf.xml  10690_20000613.tbf.xml  10840_20000614.tbf.xml  108_20010102.tbf.xml  108_20020102.tbf.xml  10957_20000615.tbf.xml  109_19990103.tbf.xml  109_20010702.tbf.xml  109_20010801.tbf.xml  109_20010802.tbf.xml  11009_20000616.tbf.xml  110702_20031219.tbf.xml  110802_20031222.tbf.xml  110_19990701.tbf.xml  110_19991001.tbf.xml  110_20000402.tbf.xml  110_20010301.tbf.xml  110_20010501.tbf.xml  110_20010701.tbf.xml  110_20011102.tbf.xml  110_20020402.tbf.xml  111_19991202.tbf.xml  114_20020301.tbf.xml  114_20020302.tbf.xml  115_19990902.tbf.xml  115_20000202_a.tbf.xml  115_20000202_b.tbf.xml  115_20000202_c.tbf.xml  115_20000202_d.tbf.xml  (+225 more)
src/data/pos/ancora-ca/CESS-CAT-AAP/: 100000_20030917.tbf.xml  100610_20030922.tbf.xml  100717_20030923.tbf.xml  100_19990601.tbf.xml  100_19991001.tbf.xml  100_20001201.tbf.xml  100_20011202.tbf.xml  101521_20030930.tbf.xml  101_19981101.tbf.xml  (+1033 more)
src/functions/: functions_perl.pl
test/: CheckPunctuation.ref  CheckPunctuation.txt  CheckPunctuation.txt.ref  CheckPunctuation.txt.ref2  characters.txt  characters.txt.out  characters.txt.ref  characters.txt.ref2  full_llista.txt.ref  full_llista.txt.ref2  llista.txt  llista.txt.out  llista.txt.ref  print_utterance
(+4 files in other folders)
